force-app/main/default/objects/LAD_Upload_Error__c/LAD_Upload_Error__c.object-meta.xml
<CustomObject>
    <label>Upload Error</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>