force-app/main/default/objects/LAD_Upload_Error__c/fields/LAD_Cart__c.field-meta.xml
<CustomField>
    <fullName>LAD_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipName>Laddaw_LE_Cart_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>