force-app/main/default/objects/LAD_Upload_Error__c/fields/LAD_Description__c.field-meta.xml
<CustomField>
    <fullName>LAD_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>