force-app/main/default/objects/LAD_Upload_Error__c/fields/LAD_Qty__c.field-meta.xml
<CustomField>
    <fullName>LAD_Qty__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>