force-app/main/default/objects/LAD_Upload_Error__c/fields/LAD_Row__c.field-meta.xml
<CustomField>
    <fullName>LAD_Row__c</fullName>
    <label>Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>