force-app/main/default/objects/LAD_Upload_Error__c/fields/LAD_SKU__c.field-meta.xml
<CustomField>
    <fullName>LAD_SKU__c</fullName>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>